--- a/package.json
+++ b/package.json
@@ -14,20 +14,22 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^1.150.3",
-    "@sanity/color-input": "^1.150.1",
-    "@sanity/components": "^1.150.3",
-    "@sanity/core": "^1.150.3",
-    "@sanity/default-layout": "^1.150.3",
-    "@sanity/default-login": "^1.150.1",
-    "@sanity/desk-tool": "^1.150.3",
-    "@sanity/google-maps-input": "^1.150.1",
-    "@sanity/production-preview": "^1.150.1",
-    "@sanity/vision": "^1.150.1",
+    "@sanity/base": "^2.6.0",
+    "@sanity/color-input": "^2.2.6",
+    "@sanity/components": "^2.2.6",
+    "@sanity/core": "^2.6.1",
+    "@sanity/default-layout": "^2.6.0",
+    "@sanity/default-login": "^2.2.6",
+    "@sanity/desk-tool": "^2.6.1",
+    "@sanity/google-maps-input": "^2.6.0",
+    "@sanity/production-preview": "^2.2.6",
+    "@sanity/vision": "^2.2.6",
     "prop-types": "^15.6",
     "react": "^16.2",
     "react-dom": "^16.2",
-    "sanity-plugin-url-metadata-input": "^1.0.0"
+    "react-icons": "^4.2.0",
+    "sanity-plugin-url-metadata-input": "^1.0.0",
+    "striptags": "^3.1.1"
   },
   "devDependencies": {}
 }
