--- a/package.json
+++ b/package.json
@@ -14,22 +14,23 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.6.4",
-    "@sanity/color-input": "^2.2.6",
-    "@sanity/components": "^2.2.6",
-    "@sanity/core": "^2.6.2",
-    "@sanity/default-layout": "^2.6.4",
-    "@sanity/default-login": "^2.2.6",
-    "@sanity/desk-tool": "^2.6.4",
-    "@sanity/google-maps-input": "^2.6.4",
-    "@sanity/production-preview": "^2.2.6",
-    "@sanity/vision": "^2.2.6",
+    "@sanity/base": "^2.21.10",
+    "@sanity/color-input": "^2.21.10",
+    "@sanity/components": "^2.14.0",
+    "@sanity/core": "^2.21.11",
+    "@sanity/default-layout": "^2.21.10",
+    "@sanity/default-login": "^2.21.10",
+    "@sanity/desk-tool": "^2.21.10",
+    "@sanity/google-maps-input": "^2.21.10",
+    "@sanity/production-preview": "^2.15.0",
+    "@sanity/vision": "^2.21.10",
     "prop-types": "^15.6",
     "react": "^16.2",
     "react-dom": "^16.2",
     "react-icons": "^4.2.0",
     "sanity-plugin-url-metadata-input": "^1.0.0",
-    "striptags": "^3.1.1"
+    "striptags": "^3.1.1",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {}
 }
