--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.33.2",
-    "@sanity/color-input": "^2.33.2",
-    "@sanity/components": "^2.14.0",
-    "@sanity/core": "^2.33.2",
-    "@sanity/default-layout": "^2.33.2",
-    "@sanity/default-login": "^2.33.2",
-    "@sanity/desk-tool": "^2.33.2",
-    "@sanity/google-maps-input": "^2.33.2",
-    "@sanity/production-preview": "^2.33.2",
-    "@sanity/vision": "^2.33.2",
+    "@sanity/base": "^2.35.0",
+    "@sanity/color-input": "^2.35.0",
+    "@sanity/components": "2.14.0",
+    "@sanity/core": "^2.35.0",
+    "@sanity/default-layout": "^2.35.0",
+    "@sanity/default-login": "^2.35.0",
+    "@sanity/desk-tool": "^2.35.1",
+    "@sanity/google-maps-input": "^2.35.1",
+    "@sanity/production-preview": "2.33.2",
+    "@sanity/vision": "^2.35.0",
     "prop-types": "^15.6",
     "react": "^16.2",
     "react-dom": "^16.2",
