--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
   "name": "novembre",
   "private": true,
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "package.json",
   "author": "PWR <cell@pwr.site>",
   "license": "UNLICENSED",
   "scripts": {
+    "dev": "sanity dev",
     "start": "sanity start",
-    "test": "sanity check"
+    "build": "sanity build",
+    "deploy": "sanity deploy",
+    "deploy-graphql": "sanity graphql deploy"
   },
   "keywords": [
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.35.0",
-    "@sanity/color-input": "^2.35.0",
-    "@sanity/components": "2.14.0",
-    "@sanity/core": "^2.35.0",
-    "@sanity/default-layout": "^2.35.0",
-    "@sanity/default-login": "^2.35.0",
-    "@sanity/desk-tool": "^2.35.1",
-    "@sanity/google-maps-input": "^2.35.1",
-    "@sanity/production-preview": "2.33.2",
-    "@sanity/vision": "^2.35.0",
-    "prop-types": "^15.6",
-    "react": "^16.2",
-    "react-dom": "^16.2",
-    "react-icons": "^4.2.0",
-    "sanity-plugin-url-metadata-input": "^1.0.0",
-    "striptags": "^3.1.1",
-    "styled-components": "^5.2.0"
+    "@sanity/color-input": "^3.1.1",
+    "@sanity/google-maps-input": "^4.0.1",
+    "@sanity/image-url": "^1.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "sanity": "^3.50.0",
+    "striptags": "^3.2.0",
+    "styled-components": "^6.1.11"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@sanity/eslint-config-studio": "^4.0.0",
+    "@types/react": "^18.3.3",
+    "eslint": "^8.56.0",
+    "prettier": "^3.3.2",
+    "typescript": "^5.5.3"
+  }
 }
